feat(backend): guardar cuándo se desbloquea cada logro, avisar en directo, rareza y quién fue el primero