@@ -40,21 +40,40 @@ class AchievementControllerTest {
     }
 
     @Test
-    void forUserMapsEachAchievementToItsResponseShape() {
+    void forUserMapsEachDetailedAchievementToItsResponseShape() {
         UserStatsSnapshot snapshot = new UserStatsSnapshot(1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1500, Set.of(), false, false, 0);
         AchievementDefinition primeraPartida = AchievementCatalog.ALL.stream()
                 .filter(def -> def.id().equals("primera-partida"))
                 .findFirst().orElseThrow();
-        when(achievementService.progressFor("alice-id")).thenReturn(
-                List.of(new AchievementService.AchievementProgress(primeraPartida, snapshot)));
+        java.time.Instant unlockedAt = java.time.Instant.parse("2026-01-15T00:00:00Z");
+        when(achievementService.detailedProgressFor("alice-id")).thenReturn(List.of(
+                new AchievementService.DetailedAchievementProgress(primeraPartida, snapshot, unlockedAt, 12.5, "bob")));
 
         List<AchievementProgressResponse> response = controller.forUser("alice-id");
 
         assertThat(response).hasSize(1);
-        assertThat(response.get(0).id()).isEqualTo("primera-partida");
-        assertThat(response.get(0).currentProgress()).isEqualTo(1);
-        assertThat(response.get(0).target()).isEqualTo(1);
-        assertThat(response.get(0).unlocked()).isTrue();
+        assertThat(response.getFirst().id()).isEqualTo("primera-partida");
+        assertThat(response.getFirst().currentProgress()).isEqualTo(1);
+        assertThat(response.getFirst().target()).isEqualTo(1);
+        assertThat(response.getFirst().unlocked()).isTrue();
+        assertThat(response.getFirst().unlockedAt()).isEqualTo(unlockedAt.toString());
+        assertThat(response.getFirst().rarityPercent()).isEqualTo(12.5);
+        assertThat(response.getFirst().firstUnlockedByUsername()).isEqualTo("bob");
+    }
+
+    @Test
+    void forUserLeavesUnlockedAtAndFirstUnlockedByNullWhenNobodyHasItYet() {
+        UserStatsSnapshot snapshot = new UserStatsSnapshot(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1500, Set.of(), false, false, 0);
+        AchievementDefinition primeraPartida = AchievementCatalog.ALL.stream()
+                .filter(def -> def.id().equals("primera-partida"))
+                .findFirst().orElseThrow();
+        when(achievementService.detailedProgressFor("alice-id")).thenReturn(List.of(
+                new AchievementService.DetailedAchievementProgress(primeraPartida, snapshot, null, 0.0, null)));
+
+        List<AchievementProgressResponse> response = controller.forUser("alice-id");
+
+        assertThat(response.getFirst().unlockedAt()).isNull();
+        assertThat(response.getFirst().firstUnlockedByUsername()).isNull();
     }
 
     @Test
@@ -71,10 +90,10 @@ class AchievementControllerTest {
         List<AchievementLeaderboardEntryResponse> leaderboard = controller.leaderboard();
 
         assertThat(leaderboard).hasSize(2);
-        assertThat(leaderboard.get(0).rank()).isEqualTo(1);
-        assertThat(leaderboard.get(0).username()).isEqualTo("alice");
-        assertThat(leaderboard.get(0).unlockedCount()).isEqualTo(15);
-        assertThat(leaderboard.get(0).totalCount()).isEqualTo(AchievementCatalog.ALL.size());
+        assertThat(leaderboard.getFirst().rank()).isEqualTo(1);
+        assertThat(leaderboard.getFirst().username()).isEqualTo("alice");
+        assertThat(leaderboard.getFirst().unlockedCount()).isEqualTo(15);
+        assertThat(leaderboard.getFirst().totalCount()).isEqualTo(AchievementCatalog.ALL.size());
         assertThat(leaderboard.get(1).rank()).isEqualTo(2);
         assertThat(leaderboard.get(1).username()).isEqualTo("bob");
     }
